--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "next": "^15.0.0",
+    "puppeteer": "^24.24.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
